--- a/backend/bower.json
+++ b/backend/bower.json
@@ -3,10 +3,10 @@
   "description": "AngularFrameworkBackend",
   "main": "gulpfile.js",
   "authors": [
-    "chintan@aavidcode.com"
+    "chintan@wohlig.com"
   ],
   "license": "ISC",
-  "homepage": "https://github.com/aavidcodeTechnology/AngularFrameworkBackend",
+  "homepage": "https://github.com/WohligTechnology/AngularFrameworkBackend",
   "moduleType": [],
   "ignore": [
     "**/.*",
