--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
   ],
   "dependencies": {
     "angular": "1.6.0",
-    "angular-animate": "^1.6.0",
-    "angular-sanitize": "^1.6.0",
+    "angular-animate": "1.4.6",
+    "angular-sanitize": "1.4.3",
     "ace-builds": "https://github.com/ajaxorg/ace-builds.git#~1.2.2",
     "angular-aria": "~1.4.8",
     "angular-backtop": "*",
@@ -43,7 +43,7 @@
     "angulartics-google-analytics": "^0.2.1",
     "animate.css": "^3.5.2",
     "bootstrap-sass": "^3.3.7",
-    "bourbon": "^4.2.7",
+    "bourbon": "4.2.7",
     "fancyBox": "^2.1.5",
     "international-phone-number": "^0.0.16",
     "jquery-slimscroll": "^1.3.8",
@@ -63,5 +63,8 @@
     "tinymce": "4.3.12",
     "angular-ui-swiper": "^2.3.6",
     "textAngular": "^1.5.16"
+  },
+  "resolutions": {
+    "angular": "1.4.6"
   }
 }
